<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NewRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_recipeTitle"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:hint="@string/newRecipe_etTitle"
                android:padding="10dp"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeCuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_RecipeCuisine"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:hint="@string/newRecipe_spinnerCuisine"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/background"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_RecipeDescription"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:gravity="top"
                android:hint="@string/newRecipe_etDescription"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_RecipeIngredients"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:gravity="top"
                android:hint="@string/newRecipe_etIngredients"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_RecipeDirections"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:gravity="top"
                android:hint="@string/newRecipe_etDirections"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_RecipeTime"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:hint="@string/newRecipe_etTime"
                android:padding="10dp"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:padding="8dp"
                android:text="@string/newRecipe_recipeImg"
                android:textColor="@color/titleText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface"
                android:hint="@string/newRecipe_etImg"
                android:padding="10dp"
                android:textColor="@color/background"
                android:textColorHint="@color/hintText"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/newRecipe_save" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
