<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.RecipeListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_recipe_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:background="@color/transparent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNewRecipe"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/add"
            android:backgroundTint="@color/surface"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSearch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/search"
            android:backgroundTint="@color/surface"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fabNewRecipe"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:background="@color/surface"
            android:hint="@string/search_hint"
            android:layout_marginHorizontal="10dp"
            android:inputType="text"
            android:textColor="@color/grey_app"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fabSearch"
            app:layout_constraintStart_toEndOf="@id/fabSearch"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
