<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.RecipeDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/CardView"
                    tools:src="@tools:sample/backgrounds/scenic[10]" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:background="@color/grey_app">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRecipeTime"
                        android:textColor="@color/surface"
                        android:textSize="20sp"
                        android:textStyle="italic|bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvRecipeTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/surface"
                        android:textSize="20sp"
                        android:textStyle="italic|bold"
                        tools:text="30 min" />

                </com.google.android.material.chip.ChipGroup>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingVertical="8dp"
                android:textColor="@color/surface"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="RECIPE TITLE" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingBottom="8dp"
                android:text="@string/tvRecipeDescription"
                android:textColor="@color/surface"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tvRecipeCuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/grey_app"
                android:text="@string/tvRecipeCuisine"
                android:textColor="@color/grey_app"
                android:textSize="14sp"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeIngredientsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:text="@string/tvRecipeIngredientsLabel"
                android:textColor="@color/surface"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingBottom="8dp"
                android:textColor="@color/surface"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeDirectionsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:text="@string/tvRecipeDirectionsLabel"
                android:textColor="@color/surface"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_app"
                android:paddingBottom="8dp"
                android:textColor="@color/surface"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
